@@ -1,7 +1,18 @@
 // VM options:
+
+// == управляем памятью
 // -Xmx24m
 
+// == выбираем вид GC
+// для цикла в 150_000 объектов
+// -XX:+UseSerialGC        - GC был вызван: 3899 раз
+// -XX:+UseParallelGC      - GC был вызван: 2098 раз
+// -XX:+UseParallelOldGC   - GC был вызван: 14281 раз
+// -XX:+UseConcMarkSweepGC - GC был вызван: 19654 раз   - deprecated (OpenJDK)
+
 public class MemoryUsage {
+
+    private static int i;
 
     public static class User {
          public String name;
@@ -12,18 +23,20 @@ public class MemoryUsage {
 
         @Override
         protected void finalize() throws Throwable {
-            System.out.println("GC coming...");
+//            System.out.println("GC coming...");
+            i++;
             super.finalize();
         }
     }
     public static void main(String[] args) {
         System.out.println("start");
         info();
-        for (int i = 0; i < 150_00000; i++) {
+        for (int i = 0; i < 150_000; i++) {
             User user = new User("test");
         }
         System.out.println("end");
         info();
+        System.out.println("GC был вызван: " + i + " раз");
     }
 
     public static void info() {
